# ebu-mxfsdk

./: .gitignore  .gitmodules  LICENSE.txt  Makefile.am  README.md  Version.h  bmx_scm_version.h  configure.ac  ebu-mxfsdk.pc.in
EBUCoreProcessor/include/EBUCore_1_4/metadata/: EBUCoreDMS++.h  EBUCoreDMS.h  Makefile.am  ebucoreAddress.h  ebucoreAlternativeTitle.h  ebucoreAncillaryData.h  ebucoreAspectRatio.h  ebucoreAudioFormat.h  ebucoreBasicLink.h  ebucoreBasicRelation.h  ebucoreCaptioning.h  ebucoreCodec.h  ebucoreCompoundName.h  ebucoreContact.h  ebucoreContactDetails.h  ebucoreContainerFormat.h  ebucoreCoordinates.h  ebucoreCoreMetadata.h  ebucoreCountry.h  ebucoreCoverage.h  ebucoreCustomRelation.h  ebucoreDataFormat.h  ebucoreDate.h  ebucoreDateType.h  ebucoreDescription.h  ebucoreDimension.h  ebucoreEncoding.h  ebucoreEntity.h  ebucoreFormat.h  ebucoreFormatGroup.h  ebucoreGenre.h  ebucoreHeight.h  ebucoreIdentifier.h  ebucoreImageFormat.h  ebucoreLanguage.h  ebucoreLocation.h  ebucoreLocator.h  ebucoreMainFramework.h  ebucoreMedium.h  ebucoreMetadataSchemeInformation.h  (+47 more)
EBUCoreProcessor/src/: EBUCoreMapping.cpp  EBUCoreProcessor.cpp  EBUCoreReverseMapping.cpp  EBU_CORE_20110915.cxx  EBU_CORE_20120817.cxx  MXFCustomMetadata.cpp  Makefile.am  Version.cpp  simpledc20021212.cxx  xml.cxx
EBUCoreProcessor/src/EBUCore_1_4/: EBUCoreMapping.cpp  EBUCoreProcessor_1_4.cpp  EBUCoreReverseMapping.cpp
EBUCoreProcessor/src/EBUCore_1_4/metadata/: EBUCoreDMS++.cpp  ebucoreAddress.cpp  ebucoreAlternativeTitle.cpp  ebucoreAncillaryData.cpp  ebucoreAspectRatio.cpp  ebucoreAudioFormat.cpp  ebucoreBasicLink.cpp  ebucoreBasicRelation.cpp  ebucoreCaptioning.cpp  ebucoreCodec.cpp  ebucoreCompoundName.cpp  ebucoreContact.cpp  ebucoreContactDetails.cpp  ebucoreContainerFormat.cpp  ebucoreCoordinates.cpp  ebucoreCoreMetadata.cpp  ebucoreCountry.cpp  ebucoreCoverage.cpp  ebucoreCustomRelation.cpp  ebucoreDataFormat.cpp  ebucoreDate.cpp  ebucoreDateType.cpp  ebucoreDescription.cpp  ebucoreDimension.cpp  ebucoreEncoding.cpp  ebucoreEntity.cpp  ebucoreFormat.cpp  ebucoreFormatGroup.cpp  ebucoreGenre.cpp  ebucoreHeight.cpp  ebucoreIdentifier.cpp  ebucoreImageFormat.cpp  ebucoreLanguage.cpp  ebucoreLocation.cpp  ebucoreLocator.cpp  ebucoreMainFramework.cpp  ebucoreMedium.cpp  ebucoreMetadataSchemeInformation.cpp  ebucoreMimeType.cpp  ebucoreObjectType.cpp  (+44 more)
EBUCoreProcessor/src/EBUCore_1_4/xsd/: EBU_CORE_20120817.cxx  EBU_CORE_20121219.cxx  EBU_CORE_20130107.cxx
EBUCoreProcessor/src/EBUCore_1_5/: EBUCoreMapping.cpp  EBUCoreProcessor_1_5.cpp  EBUCoreReverseMapping.cpp
EBUCoreProcessor/src/EBUCore_1_5/metadata/: EBUCoreDMS++.cpp  ebucoreAddress.cpp  ebucoreAncillaryData.cpp  ebucoreAspectRatio.cpp  ebucoreAudioFormat.cpp  ebucoreBasicRelation.cpp  ebucoreCaptioning.cpp  ebucoreCodec.cpp  ebucoreContact.cpp  ebucoreContactDetails.cpp  ebucoreContainerFormat.cpp  ebucoreCoordinates.cpp  ebucoreCoreMetadata.cpp  ebucoreCoverage.cpp  ebucoreCustomRelation.cpp  ebucoreDataFormat.cpp  ebucoreDate.cpp  ebucoreDateType.cpp  ebucoreDescription.cpp  ebucoreDimension.cpp  ebucoreEncoding.cpp  ebucoreEntity.cpp  ebucoreFormat.cpp  ebucoreFormatGroup.cpp  ebucoreGenre.cpp  ebucoreIdentifier.cpp  ebucoreImageFormat.cpp  ebucoreLanguage.cpp  ebucoreLocation.cpp  ebucoreMainFramework.cpp  ebucoreMedium.cpp  ebucoreMetadataSchemeInformation.cpp  ebucoreMimeType.cpp  ebucoreObjectType.cpp  ebucoreOrganisation.cpp  ebucoreOrganisationDepartment.cpp  ebucorePackageInfo.cpp  ebucorePartFramework.cpp  ebucorePartMetadata.cpp  ebucorePeriodOfTime.cpp  (+30 more)
EBUCoreProcessor/src/EBUCore_1_5/xsd/: EBU_CORE_20120817.cxx  simpledc20021212.cxx
EBUCoreProcessor/src/metadata/: EBUCoreDMS++.cpp  ebucoreAddress.cpp  ebucoreAddressLine.cpp  ebucoreAlternativeTitle.cpp  ebucoreAncillaryData.cpp  ebucoreAspectRatio.cpp  ebucoreAudioFormat.cpp  ebucoreBasicRelation.cpp  ebucoreCaptioning.cpp  ebucoreCodec.cpp  ebucoreContact.cpp  ebucoreContactDetails.cpp  ebucoreContainerFormat.cpp  ebucoreCoordinates.cpp  ebucoreCoreMetadata.cpp  ebucoreCoverage.cpp  ebucoreCustomRelation.cpp  ebucoreDataFormat.cpp  ebucoreDate.cpp  ebucoreDateType.cpp  ebucoreDescription.cpp  ebucoreDimension.cpp  ebucoreEncoding.cpp  ebucoreEntity.cpp  ebucoreFormat.cpp  ebucoreFormatGroup.cpp  ebucoreGenre.cpp  ebucoreIdentifier.cpp  ebucoreImageFormat.cpp  ebucoreLanguage.cpp  ebucoreLanguagePurpose.cpp  ebucoreLocation.cpp  ebucoreLocator.cpp  ebucoreMainFramework.cpp  ebucoreMedium.cpp  ebucoreMetadataSchemeInformation.cpp  ebucoreMimeType.cpp  ebucoreObjectType.cpp  ebucoreOrganisation.cpp  ebucoreOrganisationDepartment.cpp  (+35 more)
EBUCoreProcessor/src/metadata/base/: ebucoreAddressBase.cpp  ebucoreAddressLineBase.cpp  ebucoreAlternativeTitleBase.cpp  ebucoreAncillaryDataBase.cpp  ebucoreAspectRatioBase.cpp  ebucoreAudioFormatBase.cpp  ebucoreBasicRelationBase.cpp  ebucoreCaptioningBase.cpp  ebucoreCodecBase.cpp  ebucoreContactBase.cpp  ebucoreContactDetailsBase.cpp  ebucoreContainerFormatBase.cpp  ebucoreCoordinatesBase.cpp  ebucoreCoreMetadataBase.cpp  ebucoreCoverageBase.cpp  ebucoreCustomRelationBase.cpp  ebucoreDataFormatBase.cpp  ebucoreDateBase.cpp  ebucoreDateTypeBase.cpp  ebucoreDescriptionBase.cpp  ebucoreDimensionBase.cpp  ebucoreEncodingBase.cpp  ebucoreEntityBase.cpp  ebucoreFormatBase.cpp  ebucoreFormatGroupBase.cpp  ebucoreGenreBase.cpp  ebucoreIdentifierBase.cpp  ebucoreImageFormatBase.cpp  ebucoreLanguageBase.cpp  ebucoreLanguagePurposeBase.cpp  ebucoreLocationBase.cpp  ebucoreMainFrameworkBase.cpp  ebucoreMediumBase.cpp  ebucoreMetadataSchemeInformationBase.cpp  ebucoreMimeTypeBase.cpp  ebucoreObjectTypeBase.cpp  ebucoreOrganisationBase.cpp  ebucoreOrganisationDepartmentBase.cpp  ebucorePackageInfoBase.cpp  (+34 more)
EBUCoreProcessor/src/xsd/: EBU_CORE_20110915.cxx  EBU_CORE_20120403.cxx  simpledc20021212.cxx
EBUCoreProcessor/tools/gen_ebucore_classes/: EBUCoreDMS.cpp  Makefile.am  ebucore_declare_references.inc  gen_metadata_classes.cpp
tools/gen_ebucore_classes/: EBUCoreDMS.cpp  Makefile.am  Metadata.h  README.txt  gen_metadata_classes.cpp
(+4606 files in other folders)
