noinst_LTLIBRARIES = libebucore.la

libebucore_la_SOURCES = \
	metadata/base/ebucoreTextualAnnotationBase.cpp \
	metadata/base/ebucoreAddressBase.cpp \
	metadata/base/ebucoreAlternativeTitleBase.cpp \
	metadata/base/ebucoreBasicRelationBase.cpp \
	metadata/base/ebucoreContactBase.cpp \
	metadata/base/ebucoreContactDetailsBase.cpp \
	metadata/base/ebucoreCoordinatesBase.cpp \
	metadata/base/ebucoreCoreMetadataBase.cpp \
	metadata/base/ebucorePartMetadataBase.cpp \
	metadata/base/ebucoreCoverageBase.cpp \
	metadata/base/ebucoreCustomRelationBase.cpp \
	metadata/base/ebucoreDateTypeBase.cpp \
	metadata/base/ebucoreDateBase.cpp \
	metadata/base/ebucoreDescriptionBase.cpp \
	metadata/base/ebucoreEntityBase.cpp \
	metadata/base/ebucoreFormatGroupBase.cpp \
	metadata/base/ebucoreGenreBase.cpp \
	metadata/base/ebucoreIdentifierBase.cpp \
	metadata/base/ebucoreLanguageBase.cpp \
	metadata/base/ebucoreLocationBase.cpp \
	metadata/base/ebucoreMainFrameworkBase.cpp \
	metadata/base/ebucoreMetadataSchemeInformationBase.cpp \
	metadata/base/ebucoreObjectTypeBase.cpp \
	metadata/base/ebucoreOrganisationDepartmentBase.cpp \
	metadata/base/ebucoreOrganisationBase.cpp \
	metadata/base/ebucorePeriodOfTimeBase.cpp \
	metadata/base/ebucoreFormatBase.cpp \
	metadata/base/ebucorePublicationHistoryEventBase.cpp \
	metadata/base/ebucoreRatingBase.cpp \
	metadata/base/ebucoreRightsBase.cpp \
	metadata/base/ebucoreSpatialBase.cpp \
	metadata/base/ebucoreStatusGroupBase.cpp \
	metadata/base/ebucoreSubjectBase.cpp \
	metadata/base/ebucoreTargetAudienceBase.cpp \
	metadata/base/ebucoreTemporalBase.cpp \
	metadata/base/ebucoreTextualAnnotationBase.cpp \
	metadata/base/ebucoreTitleBase.cpp \
	metadata/base/ebucoreTypeBase.cpp \
	metadata/base/ebucoreTypeGroupBase.cpp \
	metadata/base/ebucoreVersionBase.cpp \
    metadata/base/ebucoreAncillaryDataBase.cpp \
    metadata/base/ebucoreAspectRatioBase.cpp \
    metadata/base/ebucoreAudioFormatBase.cpp \
    metadata/base/ebucoreCaptioningBase.cpp \
    metadata/base/ebucoreCodecBase.cpp \
    metadata/base/ebucoreContainerFormatBase.cpp \
    metadata/base/ebucoreDataFormatBase.cpp \
    metadata/base/ebucoreDimensionBase.cpp \
    metadata/base/ebucoreEncodingBase.cpp \
    metadata/base/ebucoreImageFormatBase.cpp \
    metadata/base/ebucoreMediumBase.cpp \
    metadata/base/ebucoreMimeTypeBase.cpp \
    metadata/base/ebucorePackageInfoBase.cpp \
    metadata/base/ebucorePartFrameworkBase.cpp \
    metadata/base/ebucoreRationalBase.cpp \
    metadata/base/ebucoreSigningFormatBase.cpp \
    metadata/base/ebucoreTrackBase.cpp \
    metadata/base/ebucoreVideoFormatBase.cpp \
	metadata/base/ebucoreTechnicalAttributeAnyURIBase.cpp \
	metadata/base/ebucoreTechnicalAttributeBooleanBase.cpp \
	metadata/base/ebucoreTechnicalAttributeFloatBase.cpp \
	metadata/base/ebucoreTechnicalAttributeInt16Base.cpp \
	metadata/base/ebucoreTechnicalAttributeInt32Base.cpp \
	metadata/base/ebucoreTechnicalAttributeInt64Base.cpp \
	metadata/base/ebucoreTechnicalAttributeInt8Base.cpp \
	metadata/base/ebucoreTechnicalAttributeRationalBase.cpp \
	metadata/base/ebucoreTechnicalAttributeStringBase.cpp \
	metadata/base/ebucoreTechnicalAttributeUInt16Base.cpp \
	metadata/base/ebucoreTechnicalAttributeUInt32Base.cpp \
	metadata/base/ebucoreTechnicalAttributeUInt64Base.cpp \
	metadata/base/ebucoreTechnicalAttributeUInt8Base.cpp \
    metadata/ebucoreAncillaryData.cpp \
    metadata/ebucoreAspectRatio.cpp \
    metadata/ebucoreAudioFormat.cpp \
    metadata/ebucoreCaptioning.cpp \
    metadata/ebucoreCodec.cpp \
    metadata/ebucoreContainerFormat.cpp \
    metadata/ebucoreDataFormat.cpp \
    metadata/ebucoreDimension.cpp \
    metadata/ebucoreEncoding.cpp \
    metadata/ebucoreImageFormat.cpp \
    metadata/ebucoreMedium.cpp \
    metadata/ebucoreMimeType.cpp \
    metadata/ebucorePackageInfo.cpp \
    metadata/ebucorePartFramework.cpp \
    metadata/ebucoreRational.cpp \
    metadata/ebucoreSigningFormat.cpp \
    metadata/ebucoreTrack.cpp \
    metadata/ebucoreVideoFormat.cpp \
	metadata/ebucoreTechnicalAttributeAnyURI.cpp \
	metadata/ebucoreTechnicalAttributeBoolean.cpp \
	metadata/ebucoreTechnicalAttributeFloat.cpp \
	metadata/ebucoreTechnicalAttributeInt16.cpp \
	metadata/ebucoreTechnicalAttributeInt32.cpp \
	metadata/ebucoreTechnicalAttributeInt64.cpp \
	metadata/ebucoreTechnicalAttributeInt8.cpp \
	metadata/ebucoreTechnicalAttributeRational.cpp \
	metadata/ebucoreTechnicalAttributeString.cpp \
	metadata/ebucoreTechnicalAttributeUInt16.cpp \
	metadata/ebucoreTechnicalAttributeUInt32.cpp \
	metadata/ebucoreTechnicalAttributeUInt64.cpp \
	metadata/ebucoreTechnicalAttributeUInt8.cpp \
	metadata/ebucoreTextualAnnotation.cpp \
	metadata/ebucoreAddress.cpp \
	metadata/ebucoreAlternativeTitle.cpp \
	metadata/ebucoreBasicRelation.cpp \
	metadata/ebucoreContact.cpp \
	metadata/ebucoreContactDetails.cpp \
	metadata/ebucoreCoordinates.cpp \
	metadata/ebucoreCoreMetadata.cpp \
	metadata/ebucorePartMetadata.cpp \
	metadata/ebucoreCoverage.cpp \
	metadata/ebucoreCustomRelation.cpp \
	metadata/ebucoreDate.cpp \
	metadata/ebucoreDateType.cpp \
	metadata/ebucoreDescription.cpp \
	metadata/EBUCoreDMS++.cpp \
	metadata/ebucoreEntity.cpp \
	metadata/ebucoreFormatGroup.cpp \
	metadata/ebucoreGenre.cpp \
	metadata/ebucoreIdentifier.cpp \
	metadata/ebucoreLanguage.cpp \
	metadata/ebucoreLocation.cpp \
	metadata/ebucoreMainFramework.cpp \
	metadata/ebucoreMetadataSchemeInformation.cpp \
	metadata/ebucoreObjectType.cpp \
	metadata/ebucoreOrganisationDepartment.cpp \
	metadata/ebucoreOrganisation.cpp \
	metadata/ebucorePeriodOfTime.cpp \
	metadata/ebucoreFormat.cpp \
	metadata/ebucorePublicationHistoryEvent.cpp \
	metadata/ebucoreRating.cpp \
	metadata/ebucoreRights.cpp \
	metadata/ebucoreSpatial.cpp \
	metadata/ebucoreStatusGroup.cpp \
	metadata/ebucoreSubject.cpp \
	metadata/ebucoreTargetAudience.cpp \
	metadata/ebucoreTemporal.cpp \
	metadata/ebucoreTextualAnnotation.cpp \
	metadata/ebucoreTitle.cpp \
	metadata/ebucoreType.cpp \
	metadata/ebucoreTypeGroup.cpp \
	metadata/ebucoreVersion.cpp \
	xsd/EBU_CORE_20120817.cxx \
	xsd/simpledc20021212.cxx \
	xsd/xml.cxx \
    XercesUtils.cpp \
    MXFCustomMetadata.cpp \
	EBUCoreMapping.cpp \
	EBUCoreReverseMapping.cpp \
	EBUCoreProcessor.cpp \
	AppUtils.cpp

libebucore_la_CXXFLAGS = $(BMX_CFLAGS)

