lib_LTLIBRARIES = libebucore.la

libebucore_la_SOURCES = \
	EBUCore_1_4/metadata/base/ebucoreTextualAnnotationBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreAddressBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreAlternativeTitleBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreBasicRelationBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreContactBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreContactDetailsBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreCoordinatesBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreCoreMetadataBase.cpp \
	EBUCore_1_4/metadata/base/ebucorePartMetadataBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreCoverageBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreCustomRelationBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreDateTypeBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreDateBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreDescriptionBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreEntityBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreFormatGroupBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreGenreBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreIdentifierBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreLanguageBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreLocationBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreMainFrameworkBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreMetadataSchemeInformationBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreObjectTypeBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreOrganisationDepartmentBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreOrganisationBase.cpp \
	EBUCore_1_4/metadata/base/ebucorePeriodOfTimeBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreFormatBase.cpp \
	EBUCore_1_4/metadata/base/ebucorePublicationHistoryEventBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreRatingBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreRightsBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreSpatialBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreStatusGroupBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreSubjectBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTargetAudienceBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTemporalBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTitleBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTypeBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTypeGroupBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreVersionBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreBasicLinkBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreCompoundNameBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreCountryBase.cpp \
	EBUCore_1_4/metadata/base/ebucorePublicationChannelBase.cpp \
	EBUCore_1_4/metadata/base/ebucorePublicationHistoryBase.cpp \
	EBUCore_1_4/metadata/base/ebucorePublicationMediumBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreRegionBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreRoleBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreAncillaryDataBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreAspectRatioBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreAudioFormatBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreCaptioningBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreCodecBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreDimensionBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreWidthBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreHeightBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreImageFormatBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreMediumBase.cpp \
    EBUCore_1_4/metadata/base/ebucorePackageInfoBase.cpp \
    EBUCore_1_4/metadata/base/ebucorePartFrameworkBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreRationalBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreSigningFormatBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreSubtitlingBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreTrackBase.cpp \
    EBUCore_1_4/metadata/base/ebucoreVideoFormatBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeAnyURIBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeBooleanBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeFloatBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeInt16Base.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeInt32Base.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeInt64Base.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeInt8Base.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeRationalBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeStringBase.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeUInt16Base.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeUInt32Base.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeUInt64Base.cpp \
	EBUCore_1_4/metadata/base/ebucoreTechnicalAttributeUInt8Base.cpp \
    EBUCore_1_4/metadata/ebucoreAncillaryData.cpp \
    EBUCore_1_4/metadata/ebucoreAspectRatio.cpp \
    EBUCore_1_4/metadata/ebucoreAudioFormat.cpp \
    EBUCore_1_4/metadata/ebucoreCaptioning.cpp \
    EBUCore_1_4/metadata/ebucoreCodec.cpp \
    EBUCore_1_4/metadata/ebucoreDataFormat.cpp \
    EBUCore_1_4/metadata/ebucoreDimension.cpp \
    EBUCore_1_4/metadata/ebucoreWidth.cpp \
    EBUCore_1_4/metadata/ebucoreHeight.cpp \
    EBUCore_1_4/metadata/ebucoreImageFormat.cpp \
    EBUCore_1_4/metadata/ebucoreMedium.cpp \
    EBUCore_1_4/metadata/ebucorePackageInfo.cpp \
    EBUCore_1_4/metadata/ebucorePartFramework.cpp \
    EBUCore_1_4/metadata/ebucoreRational.cpp \
    EBUCore_1_4/metadata/ebucoreSigningFormat.cpp \
    EBUCore_1_4/metadata/ebucoreSubtitling.cpp \
    EBUCore_1_4/metadata/ebucoreTrack.cpp \
    EBUCore_1_4/metadata/ebucoreVideoFormat.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeAnyURI.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeBoolean.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeFloat.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeInt16.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeInt32.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeInt64.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeInt8.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeRational.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeString.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeUInt16.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeUInt32.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeUInt64.cpp \
	EBUCore_1_4/metadata/ebucoreTechnicalAttributeUInt8.cpp \
	EBUCore_1_4/metadata/ebucoreTextualAnnotation.cpp \
	EBUCore_1_4/metadata/ebucoreAddress.cpp \
	EBUCore_1_4/metadata/ebucoreAlternativeTitle.cpp \
	EBUCore_1_4/metadata/ebucoreBasicRelation.cpp \
	EBUCore_1_4/metadata/ebucoreContact.cpp \
	EBUCore_1_4/metadata/ebucoreContactDetails.cpp \
	EBUCore_1_4/metadata/ebucoreCoordinates.cpp \
	EBUCore_1_4/metadata/ebucoreCoreMetadata.cpp \
	EBUCore_1_4/metadata/ebucorePartMetadata.cpp \
	EBUCore_1_4/metadata/ebucoreCoverage.cpp \
	EBUCore_1_4/metadata/ebucoreCustomRelation.cpp \
	EBUCore_1_4/metadata/ebucoreDate.cpp \
	EBUCore_1_4/metadata/ebucoreDateType.cpp \
	EBUCore_1_4/metadata/ebucoreDescription.cpp \
	EBUCore_1_4/metadata/EBUCoreDMS++.cpp \
	EBUCore_1_4/metadata/ebucoreEntity.cpp \
	EBUCore_1_4/metadata/ebucoreFormatGroup.cpp \
	EBUCore_1_4/metadata/ebucoreGenre.cpp \
	EBUCore_1_4/metadata/ebucoreIdentifier.cpp \
	EBUCore_1_4/metadata/ebucoreLanguage.cpp \
	EBUCore_1_4/metadata/ebucoreLocation.cpp \
	EBUCore_1_4/metadata/ebucoreMainFramework.cpp \
	EBUCore_1_4/metadata/ebucoreMetadataSchemeInformation.cpp \
	EBUCore_1_4/metadata/ebucoreObjectType.cpp \
	EBUCore_1_4/metadata/ebucoreOrganisationDepartment.cpp \
	EBUCore_1_4/metadata/ebucoreOrganisation.cpp \
	EBUCore_1_4/metadata/ebucorePeriodOfTime.cpp \
	EBUCore_1_4/metadata/ebucoreFormat.cpp \
	EBUCore_1_4/metadata/ebucorePublicationHistoryEvent.cpp \
	EBUCore_1_4/metadata/ebucoreRating.cpp \
	EBUCore_1_4/metadata/ebucoreRights.cpp \
	EBUCore_1_4/metadata/ebucoreSpatial.cpp \
	EBUCore_1_4/metadata/ebucoreStatusGroup.cpp \
	EBUCore_1_4/metadata/ebucoreSubject.cpp \
	EBUCore_1_4/metadata/ebucoreTargetAudience.cpp \
	EBUCore_1_4/metadata/ebucoreTemporal.cpp \
	EBUCore_1_4/metadata/ebucoreTitle.cpp \
	EBUCore_1_4/metadata/ebucoreType.cpp \
	EBUCore_1_4/metadata/ebucoreTypeGroup.cpp \
	EBUCore_1_4/metadata/ebucoreVersion.cpp \
	EBUCore_1_4/metadata/ebucoreBasicLink.cpp \
	EBUCore_1_4/metadata/ebucoreCompoundName.cpp \
	EBUCore_1_4/metadata/ebucoreCountry.cpp \
	EBUCore_1_4/metadata/ebucorePublicationChannel.cpp \
	EBUCore_1_4/metadata/ebucorePublicationHistory.cpp \
	EBUCore_1_4/metadata/ebucorePublicationMedium.cpp \
	EBUCore_1_4/metadata/ebucoreRegion.cpp \
	EBUCore_1_4/metadata/ebucoreRole.cpp \
	EBUCore_1_4/xsd/EBU_CORE_20120817.cxx \
	xsd/simpledc20021212.cxx \
	xsd/xml.cxx \
	EBUCore_1_4/EBUCoreMapping.cpp \
	EBUCore_1_4/EBUCoreReverseMapping.cpp \
	EBUCore_1_4/EBUCoreProcessor_1_4.cpp \
	EBUCoreProcessor.cpp \
	AppUtils.cpp

libebucore_la_CXXFLAGS = $(EBUSDK_CFLAGS)

