SUBDIRS = base

library_includedir = $(includedir)/ebu-mxfsdk-@EBUSDK_MAJORMINOR@/EBUCore_1_4/metadata
nobase_library_include_HEADERS = \
	ebucoreAddress.h \
	ebucoreAlternativeTitle.h \
	ebucoreAncillaryData.h \
	ebucoreAspectRatio.h \
	ebucoreAudioFormat.h \
	ebucoreBasicLink.h \
	ebucoreBasicRelation.h \
	ebucoreCaptioning.h \
	ebucoreCodec.h \
	ebucoreCompoundName.h \
	ebucoreContactDetails.h \
	ebucoreContact.h \
	ebucoreCoordinates.h \
	ebucoreCoreMetadata.h \
	ebucoreCountry.h \
	ebucoreCoverage.h \
	ebucoreCustomRelation.h \
	ebucoreDataFormat.h \
	ebucoreDate.h \
	ebucoreDateType.h \
	ebucoreDescription.h \
	ebucoreDimension.h \
	EBUCoreDMS.h \
	EBUCoreDMS++.h \
	ebucoreEntity.h \
	ebucore_extensions_data_model.h \
	ebucoreFormatGroup.h \
	ebucoreFormat.h \
	ebucoreGenre.h \
	ebucoreHeight.h \
	ebucoreIdentifier.h \
	ebucoreImageFormat.h \
	ebucoreLanguage.h \
	ebucoreLocation.h \
	ebucoreMainFramework.h \
	ebucoreMedium.h \
	ebucoreMetadataSchemeInformation.h \
	ebucoreObjectType.h \
	ebucoreOrganisationDepartment.h \
	ebucoreOrganisation.h \
	ebucorePackageInfo.h \
	ebucorePartFramework.h \
	ebucorePartMetadata.h \
	ebucorePeriodOfTime.h \
	ebucorePublicationChannel.h \
	ebucorePublicationHistoryEvent.h \
	ebucorePublicationHistory.h \
	ebucorePublicationMedium.h \
	ebucorePublicationService.h \
	ebucoreRating.h \
	ebucoreRational.h \
	ebucoreRegion.h \
	ebucoreRights.h \
	ebucoreRole.h \
	ebucoreSigningFormat.h \
	ebucoreSpatial.h \
	ebucoreStatusGroup.h \
	ebucoreSubject.h \
	ebucoreSubtitling.h \
	ebucoreTargetAudience.h \
	ebucoreTechnicalAttributeAnyURI.h \
	ebucoreTechnicalAttributeBoolean.h \
	ebucoreTechnicalAttributeFloat.h \
	ebucoreTechnicalAttributeInt16.h \
	ebucoreTechnicalAttributeInt32.h \
	ebucoreTechnicalAttributeInt64.h \
	ebucoreTechnicalAttributeInt8.h \
	ebucoreTechnicalAttributeRational.h \
	ebucoreTechnicalAttributeString.h \
	ebucoreTechnicalAttributeUInt16.h \
	ebucoreTechnicalAttributeUInt32.h \
	ebucoreTechnicalAttributeUInt64.h \
	ebucoreTechnicalAttributeUInt8.h \
	ebucoreTemporal.h \
	ebucoreTextualAnnotation.h \
	ebucoreTitle.h \
	ebucoreTrack.h \
	ebucoreTypeGroup.h \
	ebucoreType.h \
	ebucoreVersion.h \
	ebucoreVideoFormat.h \
	ebucoreWidth.h
