library_includedir = $(includedir)/ebu-mxfsdk-@EBUSDK_MAJORMINOR@/EBUCore_1_4/metadata/base
nobase_library_include_HEADERS = \
	ebucoreAddressBase.h \
	ebucoreAlternativeTitleBase.h \
	ebucoreAncillaryDataBase.h \
	ebucoreAspectRatioBase.h \
	ebucoreAudioFormatBase.h \
	ebucoreBasicLinkBase.h \
	ebucoreBasicRelationBase.h \
	ebucoreCaptioningBase.h \
	ebucoreCodecBase.h \
	ebucoreCompoundNameBase.h \
	ebucoreContactBase.h \
	ebucoreContactDetailsBase.h \
	ebucoreCoordinatesBase.h \
	ebucoreCoreMetadataBase.h \
	ebucoreCountryBase.h \
	ebucoreCoverageBase.h \
	ebucoreCustomRelationBase.h \
	ebucoreDataFormatBase.h \
	ebucoreDateBase.h \
	ebucoreDateTypeBase.h \
	ebucoreDescriptionBase.h \
	ebucoreDimensionBase.h \
	ebucoreEntityBase.h \
	ebucoreFormatBase.h \
	ebucoreFormatGroupBase.h \
	ebucoreGenreBase.h \
	ebucoreHeightBase.h \
	ebucoreIdentifierBase.h \
	ebucoreImageFormatBase.h \
	ebucoreLanguageBase.h \
	ebucoreLocationBase.h \
	ebucoreMainFrameworkBase.h \
	ebucoreMediumBase.h \
	ebucoreMetadataSchemeInformationBase.h \
	ebucoreObjectTypeBase.h \
	ebucoreOrganisationBase.h \
	ebucoreOrganisationDepartmentBase.h \
	ebucorePackageInfoBase.h \
	ebucorePartFrameworkBase.h \
	ebucorePartMetadataBase.h \
	ebucorePeriodOfTimeBase.h \
	ebucorePublicationChannelBase.h \
	ebucorePublicationHistoryBase.h \
	ebucorePublicationHistoryEventBase.h \
	ebucorePublicationMediumBase.h \
	ebucorePublicationServiceBase.h \
	ebucoreRatingBase.h \
	ebucoreRationalBase.h \
	ebucoreRegionBase.h \
	ebucoreRightsBase.h \
	ebucoreRoleBase.h \
	ebucoreSigningFormatBase.h \
	ebucoreSpatialBase.h \
	ebucoreStatusGroupBase.h \
	ebucoreSubjectBase.h \
	ebucoreSubtitlingBase.h \
	ebucoreTargetAudienceBase.h \
	ebucoreTechnicalAttributeAnyURIBase.h \
	ebucoreTechnicalAttributeBooleanBase.h \
	ebucoreTechnicalAttributeFloatBase.h \
	ebucoreTechnicalAttributeInt16Base.h \
	ebucoreTechnicalAttributeInt32Base.h \
	ebucoreTechnicalAttributeInt64Base.h \
	ebucoreTechnicalAttributeInt8Base.h \
	ebucoreTechnicalAttributeRationalBase.h \
	ebucoreTechnicalAttributeStringBase.h \
	ebucoreTechnicalAttributeUInt16Base.h \
	ebucoreTechnicalAttributeUInt32Base.h \
	ebucoreTechnicalAttributeUInt64Base.h \
	ebucoreTechnicalAttributeUInt8Base.h \
	ebucoreTemporalBase.h \
	ebucoreTextualAnnotationBase.h \
	ebucoreTitleBase.h \
	ebucoreTrackBase.h \
	ebucoreTypeBase.h \
	ebucoreTypeGroupBase.h \
	ebucoreVersionBase.h \
	ebucoreVideoFormatBase.h \
	ebucoreWidthBase.h
